# reddit-saved-to-notion

./: .gitignore  LICENSE  README.md  config_eg.ini  pyproject.toml  requirements.txt
reddit_saved_to_notion/: main.py
